# cuda-dpdk-network-fuzzer

./: .gitignore  README.md
Server/: CMakeLists.txt  config.json  main.cpp  main_benchmark.cpp
Server/src/api/: CMakeLists.txt  HttpSrv.cpp  HttpSrv.h  RouteGroup.h
Server/src/api/routing/: FuzzRoutes.cpp  FuzzRoutes.h  TelemetryRoutes.cpp  TelemetryRoutes.h  VMRoutes.cpp  VMRoutes.h
Server/src/benchmark/: CMakeLists.txt  CpuUtils.h  GeneratorBenchmark.cpp  GeneratorBenchmark.h  GpuPacketGenerator.cu  GpuPacketGenerator.h  HeavyPayloadGenerator.cpp  HeavyPayloadGenerator.h  IPacketGenerator.h  LinuxSocketSender.cpp  LinuxSocketSender.h  MultiThreadGenerator.cpp  MultiThreadGenerator.h  SingleThreadGenerator.cpp  SingleThreadGenerator.h  TransmissionBenchmark.cpp  TransmissionBenchmark.h
Server/src/config/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h
Server/src/domain/: CMakeLists.txt
Server/src/fuzzing/: CMakeLists.txt  DpdkSender.cpp  DpdkSender.h  FuzzEngine.cpp  FuzzEngine.h  PacketBuffer.cpp  PacketBuffer.h  TargetMonitor.cpp  TargetMonitor.h
Server/src/fuzzing/kernels/: HeavyPayloadFuzzStrategy.cu  IcmpFuzzStrategy.cu  IpHeaderFuzzStrategy.cu  TcpFuzzStrategy.cu
Server/src/fuzzing/strategies/: HeavyPayloadFuzzStrategy.h  IFuzzStrategy.h  IcmpFuzzStrategy.h  IpHeaderFuzzStrategy.h  NetworkHeaders.cuh  TcpFuzzStrategy.h
Server/src/services/: CMakeLists.txt  FuzzService.cpp  FuzzService.h  VMService.cpp  VMService.h
Server/src/utils/: CMakeLists.txt  Logger.cpp  Logger.h  NotificationHub.h  ServiceException.h
Server/vm-profiles/: alpine-target.json  metasploitable2.json  openwrt-x86.json  vyos-router.json  windows-xp.json
Server/vm-profiles/templates/: linux_legacy_template.xml  linux_virtio_template.xml  openwrt_template.xml  winxp_template.xml
client/: config.py  main.py  main_window.py  requirements.txt  style.py
client/api/: client.py  models.py
client/widgets/: flow_panel.py  fuzz_panel.py  placeholder_widgets.py  toolbar.py  vm_panel.py
client/workers/: api_worker.py  base_worker.py  packet_flow_worker.py  poll_worker.py  telemetry_worker.py
scripts/: benchmark_plot.py
scripts/results/: benchmark_dpdk.csv  benchmark_generation.csv  benchmark_linux.csv
